# DocMax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
dforge/: banner.py  batch.py  cli.py  config.py  config_manager.py  converter.py  dependencies.py  engine.py  extractor.py  loading.py  menu.py  operations.py  processor.py  setup.py  theme.py  utils.py  watcher.py
dforge/workflows/: automation.py  batch.py  batch_ocr.py  common.py  compress.py  convert.py  decrypt.py  encrypt.py  extract.py  image.py  merge.py  ocr.py  pages.py  rotate.py  searchable.py  settings.py  split.py  tables.py  watermark.py
docmax/: __init__.py  banner.py  batch.py  cli.py  config.py  config_manager.py  converter.py  dependencies.py  engine.py  extractor.py  help.py  menu.py  operations.py  processor.py  setup.py  theme.py  utils.py  watcher.py
docmax/workflows/: automation.py  batch.py  batch_ocr.py  common.py  compress.py  convert.py  decrypt.py  encrypt.py  extract.py  image.py  merge.py  ocr.py  ocr_tools.py  pages.py  pdf.py  rotate.py  searchable.py  settings.py  split.py  tables.py  watermark.py
scripts/: test_cli.py
