[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "docmax"
version = "1.1.1"
description = "DocMax — Unified Document Processing CLI. Forge your documents from your terminal."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Punith Naidu",email = "punithmedaramitta@gmail.com"}
]
license = { text = "MIT" }
keywords = ["pdf", "ocr", "document", "cli", "conversion", "tesseract", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pypdf>=3.0.0",
    "Pillow>=10.0.0",
    "img2pdf>=0.4.4",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyfiglet>=1.0.2",
]

[project.optional-dependencies]

ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3"
]

tables = [
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0"
]

image = [
    "rembg>=2.0.0",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.8.0"
]

full = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rembg>=2.0.0",
    "onnxruntime>=1.18.0"
]
[project.scripts]
docmax = "docmax.cli:app"

[project.urls]
